# EndlessRunner

./: CMakeLists.txt  readme.md
cmake/sdl2/: FindSDL2.cmake  FindSDL2_gfx.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake
src/: GameMethods.h  GameMethods.hpp  LTextureClass.h  Texture.cpp  Texture.hpp  Variables.h  Variables.hpp  main.cpp
